# Time-Series

./: .gitignore  README.md  timeseries_part1.ipynb  timeserietools.py
RecommendationSystem/: justfile  pyproject.toml
RecommendationSystem/app/: app.py
RecommendationSystem/app/assets/: style.css
RecommendationSystem/app/callbacks/: dropdown_callback.py  import_callbacks.py
RecommendationSystem/app/components/: body_page.py  card_group.py  card_mini_video.py  card_stats.py  card_views.py  likes_buttons.py  render_group.py  search_video.py  video_render.py  video_speed.py
RecommendationSystem/app/src/: get_videos.py  get_videos_interactions.py  video_classification.py  video_forecast.py  video_processing_data.py
RecommendationSystem/app/src/models/: title_vectorizer_20240217.pkl.z
RecommendationSystem/data_pipeline/ingestion/: channel_details.py  get_video_interactions.py  video_search.py
RecommendationSystem/data_pipeline/processing/: extract_video_attributes.py  video_attributes_from_bronze_to_silver.py  video_attributes_from_silver_to_gold.py  video_statistics_from_bronze_to_silver.py  video_statistics_from_landing_to_bronze.py
RecommendationSystem/data_science/modeling/: ensemble_modeling.py  model_lightgbm.py  model_logisticregression.py  tfidf_tunning.py
RecommendationSystem/data_science/models/: lgbm_20240217.pkl.z  logistic_reg_20240217.pkl.z
RecommendationSystem/data_science/processing/: activy_learning.py  data_processing_and_exploration.py  tree_vizualitation
RecommendationSystem/web_scraping/: video_data_proccessing.py  video_search.py
(+8 files in other folders)
