[tool.poetry]
name = "ytrecommendsystem"
version = "0.0.0"
description = "A video recommendation system from youtube"
authors = ["wesleyjw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.5"
python-dotenv = "^1.0.1"
google-api-python-client = "2.116.0"
google-auth-oauthlib = "1.2.0"
pyarrow = "^15.0.0"
lightgbm = "4.3"
scikit-learn = "1.3"
scikit-optimize = "0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
tqdm = "4.66.1"
matplotlib = "3.5"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
